get bank accounts (#29)
* LAST time, Igor, /dev/urandom IS NOT a variable name generator...

* I don't know what the hell I was thinking.
